<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="false"
        android:src="@drawable/avart" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:scrollbars="none">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="right"
                    android:text="@string/card_name"
                    android:textColor="@color/brown_700"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="right"
                    android:text="@string/card_sex"
                    android:textColor="@color/brown_700"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_sex"
                    android:layout_width="1180dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="TextView"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="right"
                    android:text="@string/card_nation"
                    android:textColor="@color/brown_700"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_nation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/brown_700"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="right"
                    android:text="@string/card_birth"
                    android:textColor="@color/brown_700"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_birth"
                    android:layout_width="1180dp"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="right"
                    android:text="@string/card_address"
                    android:textColor="@color/brown_700"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="right"
                    android:text="@string/card_id"
                    android:textColor="@color/brown_700"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_id"
                    android:layout_width="1180dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="TextView"
                    android:textColor="@color/brown_700"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="right"
                    android:text="@string/card_authority"
                    android:textColor="@color/brown_700"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_official"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/brown_700"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="right"
                    android:text="@string/card_volidate"
                    android:textColor="@color/brown_700"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_valid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/brown_700"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>
    </ScrollView>
</LinearLayout>